--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ernesto Hernández Bernal
-#logo:
+logo: /img/yo.jpg
 #description: text below image
-#show_downloads: true
+show_downloads: true
 theme: jekyll-theme-minimal
