--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ernesto Hernández Bernal
-logo: /img/nuevo_diseno.png
+logo: /img/new.jpg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
